Fixing initial text layout on mobile

--- a/site/containers/NoColorNotification/noColorNotification.pcss
+++ b/site/containers/NoColorNotification/noColorNotification.pcss
@@ -8,10 +8,7 @@
   justify-content: center;
 
   > h2 {
-    position: fixed;
     text-align: center;
-    left: auto;
-    right: auto;
     width: 100vw;
     font-size: 1rem;
   }
