--- a/site/global-css/global-styles.pcss
+++ b/site/global-css/global-styles.pcss
@@ -18,6 +18,11 @@
   display: flex;
 }
 
+:global(.center) {
+  align-items: center;
+  justify-content: center;
+}
+
 body {
   background-color: var(--background);
   color: var(--foreground);
